Fix horizontal scroll and overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,6 @@ html,
 body {
   height: 100%;
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
